Resolved menu bar text overlapping

--- a/css/common.css
+++ b/css/common.css
@@ -221,12 +221,12 @@ footer .footer-container {
 }
 
 .logo > .year {
-    font-size: 0.75rem;
+    font-size: 1.25rem;
     line-height: 1rem;
     position: absolute;
 }
 
 .logo > .name {
     font-size: 1.5rem;
-    line-height: 1.8rem;
+    line-height: 4rem;
 }
